--- a/jordan.html
+++ b/jordan.html
@@ -242,8 +242,8 @@
             </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 أرشيف الدول العربية. جميع الحقوق محفوظة لمحمد عصام ومحمد العمري والهاجري والجلهم وأنس.</p>
-                <p>تصميم وتطوير: محمد عصام ومحمد العمري والهاجري والجلهم وأنس</p>
+               <p>&copy; 2025 أرشيف الدول العربية. جميع الحقوق محفوظة لمحمد ومحمد العمري والهاجري والجلهم وأنس.</p>
+                <p>تصميم وتطوير: محمد ومحمد العمري والهاجري والجلهم وأنس</p>
             </div>
         </div>
     </footer>
