--- a/palestine.html
+++ b/palestine.html
@@ -249,8 +249,8 @@
             </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 أرشيف الدول العربية. جميع الحقوق محفوظة لمحمد عصام ومحمد العمري والهاجري والجلهم وأنس.</p>
-                <p>تصميم وتطوير: فريق محمد عصام </p>
+             <p>&copy; 2025 أرشيف الدول العربية. جميع الحقوق محفوظة لمحمد ومحمد العمري والهاجري والجلهم وأنس.</p>
+                <p>تصميم وتطوير: محمد ومحمد العمري والهاجري والجلهم وأنس</p>
             </div>
         </div>
     </footer>
