--- a/profile.html
+++ b/profile.html
@@ -114,8 +114,8 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 أرشيف الدول العربية. جميع الحقوق محفوظة لدولة قطر.</p>
-                <p>تصميم وتطوير: محمد عصام ومحمد العمري</p>
+           <p>&copy; 2025 أرشيف الدول العربية. جميع الحقوق محفوظة لمحمد ومحمد العمري والهاجري والجلهم وأنس.</p>
+                <p>تصميم وتطوير: محمد ومحمد العمري والهاجري والجلهم وأنس</p>
             </div>
         </div>
     </footer>
