--- a/qatar.html
+++ b/qatar.html
@@ -242,9 +242,8 @@
                 <li><a href="https://sudanarchive.net/?a=p&p=home">sudanarchive</a></li>
             </ul>
         </div>
-            <div class="footer-bottom">
-                <p>&copy; 2025 أرشيف الدول العربية. جميع الحقوق محفوظة لمحمد عصام ومحمد العمري والهاجري والجلهم وأنس.</p>
-                <p>تصميم وتطوير: محمد عصام ومحمد العمري والهاجري والجلهم وأنس</p>
+            <div class="footer-bottom"><p>&copy; 2025 أرشيف الدول العربية. جميع الحقوق محفوظة لمحمد ومحمد العمري والهاجري والجلهم وأنس.</p>
+                <p>تصميم وتطوير: محمد ومحمد العمري والهاجري والجلهم وأنس</p>
             </div>
         </div>
     </footer>
