--- a/sudan.html
+++ b/sudan.html
@@ -243,8 +243,8 @@
             </ul>
         </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 أرشيف الدول العربية. جميع الحقوق محفوظة لمحمد عصام ومحمد العمري والهاجري والجلهم وأنس.</p>
-                <p>تصميم وتطوير: محمد عصام ومحمد العمري والهاجري والجلهم وأنس</p>
+             <p>&copy; 2025 أرشيف الدول العربية. جميع الحقوق محفوظة لمحمد ومحمد العمري والهاجري والجلهم وأنس.</p>
+                <p>تصميم وتطوير: محمد ومحمد العمري والهاجري والجلهم وأنس</p>
             </div>
         </div>
     </footer>
