--- a/about.html
+++ b/about.html
@@ -106,8 +106,8 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 أرشيف الدول العربية. جميع الحقوق محفوظة لدولة قطر.</p>
-                <p>تصميم وتطوير: محمد عصام ومحمد العمري 
+              <p>&copy; 2025 أرشيف الدول العربية. جميع الحقوق محفوظة لمحمد ومحمد العمري والهاجري والجلهم وأنس.</p>
+                <p>تصميم وتطوير: محمد ومحمد العمري والهاجري والجلهم وأنس</p>
                 </div>
                 <div class="footer-links">
                     <ul>
