--- a/index.html
+++ b/index.html
@@ -199,4 +199,48 @@
                     <a href="qatar.html" class="btn primary-btn">قطر</a>
                     <a href="jordan.html" class="btn primary-btn">الأردن</a>
                     <a href="sudan.html" class="btn primary-btn">السودان</a>
-                   
+                    <a href="palestine.html" class="btn primary-btn">فلسطين</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-logo">
+                    <h3>أرشيف الدول العربية</h3>
+                    <p>موقع شامل يوثق تاريخ وإنجازات ومعالم الدول العربية</p>
+                </div>
+                <div class="footer-links">
+                    <ul>
+                        <h4>مصادر ومراجع</h4>
+
+                        <li><a href="https://www.iloveqatar.net/">iloveqatar</a></li>
+                        <li><a href="https://en.wikipedia.org/wiki/Jordan">wikipediaJordan</a></li>
+                        <li><a href="https://iloveegypt.com/">iloveEgypt</a></li>
+                        <li><a href="https://sudanarchive.net/?a=p&p=home">sudanarchive</a></li>
+                    </ul>
+                </div>
+                <div class="contact-info">
+                    <h3>تواصل معنا</h3>
+                    <p><i class="fas fa-envelope"></i> info@arabcountriesarchive.com</p>
+                    <p><i class="fas fa-phone"></i> 04042007</p>
+                    <div class="social-links">
+                        <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
+                        <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+                        <a href="#" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; 2025 أرشيف الدول العربية. جميع الحقوق محفوظة لمحمد ومحمد العمري والهاجري والجلهم وأنس.</p>
+                <p>تصميم وتطوير: محمد ومحمد العمري والهاجري والجلهم وأنس</p>
+            </div>
+        </div>
+    </footer>
+
+    <script src="js/main.js"></script>
+</body>
+</html> 
